PL-8378 Create REST controller that will provide entities and enums localization
